--- a/instagram20.html
+++ b/instagram20.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000110.jpg" title="Handlebar Roll completes the kit. #bikepacking #fatbike #bicycle #cycling #adventurebike #bicyclebag #lovestarbicyclebags #handmade" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Handlebar Roll completes the kit. #bikepacking #fatbike #bicycle #cycling #adventurebike #bicyclebag #lovestarbicyclebags #handmade</small>
+                           </div>
+                           <img src="../lsphotos/image000110.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000111.jpg" title="Finished up a handlebar grab bag. The whole #bikepacking kit is starting to come together. #lovestarbicyclebags #handmade #bikechi #adventurebike #fatbike #bicyclebag #bicycle #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a handlebar grab bag. The whole #bikepacking kit is starting to come together. #lovestarbicyclebags #handmade #bikechi #adventurebike #fatbike #bicyclebag #bicycle #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000111.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000112.jpg" title="Had to take some pictures of my gear with some better light. #Bikepacking #bicycle #fatbike #adventurebike #bikechi #handmade #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Had to take some pictures of my gear with some better light. #Bikepacking #bicycle #fatbike #adventurebike #bikechi #handmade #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000112.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000113.jpg" title="Added a couple of top tube bags to my personal setup in preparation for Mt. Hood. #Handmade #lovestarbicyclebags #Bikepacking #bicycle #fatbike #adventurebike #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Added a couple of top tube bags to my personal setup in preparation for Mt. Hood. #Handmade #lovestarbicyclebags #Bikepacking #bicycle #fatbike #adventurebike #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000113.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000084.jpg" title="T-minus 5 days until Mt. Hood #Bikepacking Adventure...final gear layout has begun. #bicycle #fatbike #lovestarbicyclebags #adventurebike" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Fellowship of the Big Ring. #bicycle #cycling #coffeeride #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000550.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000533.jpg" title="Saturday afternoons are good for bike washing. #lovestarfactoryteam #ridecannondale #supersixevo #cleanbike #baaw" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Saturday afternoons are good for bike washing. #lovestarfactoryteam #ridecannondale #supersixevo #cleanbike #baaw</small>
-                           </div>
-                           <img src="../lsphotos/image000533.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000551.jpg" title="It was a close race...but @agonz21 with his blue bike edged me out in the match-your-accessories-to-your-kit game today. #cycling #bicycle #lovestarfactoryteam #bikesonfleek" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>It was a close race...but @agonz21 with his blue bike edged me out in the match-your-accessories-to-your-kit game today. #cycling #bicycle #lovestarfactoryteam #bikesonfleek</small>
-                           </div>
-                           <img src="../lsphotos/image000551.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000552.jpg" title="Couldn't find my sunglasses his morning...had to go full spaceman. #aeroiseverything #lovestarfactoryteam #cycling #bicycle #bikechi #BikeToTheFuture" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Couldn't find my sunglasses his morning...had to go full spaceman. #aeroiseverything #lovestarfactoryteam #cycling #bicycle #bikechi #BikeToTheFuture</small>
-                           </div>
-                           <img src="../lsphotos/image000552.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000538.jpg" title="From today's ride. #mocabang #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>From today's ride. #mocabang #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000538.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
