--- a/instagram32.html
+++ b/instagram32.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000228.jpg" title="Rainy morning project. #lovestarbicyclebags #handmade #cycling #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Rainy morning project. #lovestarbicyclebags #handmade #cycling #bikepackingbags #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000228.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000651.jpg" title="Maiden voyage on the new Motobecane today. Considering I bought this bike as a cost-effective (relatively speaking of course!) straight from the internet all weather/commuter bike, I'm pleasantly surprised at how solid it is. Major kudos to @elliotlovestarbicycles for helping me assemble, lube, and adjust all the critical stuff. A few tweaks and upgrades and this will be a killer winter machine!! #lovestarfactoryteam #motobecane" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Maiden voyage on the new Motobecane today. Considering I bought this bike as a cost-effective (relatively speaking of course!) straight from the internet all weather/commuter bike, I'm pleasantly surprised at how solid it is. Major kudos to @elliotlovestarbicycles for helping me assemble, lube, and adjust all the critical stuff. A few tweaks and upgrades and this will be a killer winter machine!! #lovestarfactoryteam #motobecane</small>
+                           </div>
+                           <img src="../lsphotos/image000651.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000652.jpg" title="Fat biking in the snow is Seriously blowing my mind as I re-discover all my local trails... #fatbike #lovestarfactoryteam #bikepackingbags #bikepacking #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fat biking in the snow is Seriously blowing my mind as I re-discover all my local trails... #fatbike #lovestarfactoryteam #bikepackingbags #bikepacking #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000652.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000229.jpg" title="Re-post from @elliotlovestarbicycles What a determined little cutie...won't be long now! #elliotlovestarbicycle #elliotlovestar #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Re-post from @elliotlovestarbicycles What a determined little cutie...won't be long now! #elliotlovestarbicycle #elliotlovestar #lovestarfactoryteam #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000229.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000230.jpg" title="Awesome race @mariannebennetttattoo!!!!! Tough course, great ride. Way to push through!! Geat shot today @elliotlovestarbicycles  #cyclocrosschicago #cyclocross #cycling #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>pattylouwho55</h4>
@@ -207,58 +259,6 @@
                               <small>Shortcut. #fatbike #cycling #bikepacking #bikebag #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000231.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000666.jpg" title="Thanks to @lt250rrcr45 for catching this great shot at #camptonCX this past weekend. #cyclocross #cx #cycling #championsystem #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Thanks to @lt250rrcr45 for catching this great shot at #camptonCX this past weekend. #cyclocross #cx #cycling #championsystem #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000666.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000667.jpg" title="Breaking away after a barrier for the final long sprint. #lovestarfactoryteam #camptonCX #cyclocross #cx #moots #psychloX" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Breaking away after a barrier for the final long sprint. #lovestarfactoryteam #camptonCX #cyclocross #cx #moots #psychloX</small>
-                           </div>
-                           <img src="../lsphotos/image000667.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000668.jpg" title="Sunset Race today at #camptonCX great course with lots of fun technical sections. #lovestarfactoryteam #cyclocross #cx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunset Race today at #camptonCX great course with lots of fun technical sections. #lovestarfactoryteam #cyclocross #cx</small>
-                           </div>
-                           <img src="../lsphotos/image000668.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000669.jpg" title="Great race today at #CamptonCX. On the way to 9th place in the 4/5 race. #lovestarfactoryteam #lsb" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Great race today at #CamptonCX. On the way to 9th place in the 4/5 race. #lovestarfactoryteam #lsb</small>
-                           </div>
-                           <img src="../lsphotos/image000669.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
