--- a/instagram5.html
+++ b/instagram5.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000969.jpg" title="Weekday ride with Gonzo #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Weekday ride with Gonzo #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000969.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000968.jpg" title="Sibling coaching. #lilshredder #kidsonbikes #clearybikes #cycling #bicycle #trainer #coach #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sibling coaching. #lilshredder #kidsonbikes #clearybikes #cycling #bicycle #trainer #coach #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000968.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000967.jpg" title="#goodbyeJudson #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>#goodbyeJudson #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000967.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000966.jpg" title="Happy Friday! Get out and have an adventure this weekend! #bicycle #cycling #fatbike #lakemichigan #mtb #lilshredder #adventuredad #adventurebike #bikepacking #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Happy Friday! Get out and have an adventure this weekend! #bicycle #cycling #fatbike #lakemichigan #mtb #lilshredder #adventuredad #adventurebike #bikepacking #bikechi #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000966.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000965.jpg" title="Shred early, shred often. #cycling #bicycle #mtb #clearybikes #lilshredder #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -221,62 +273,6 @@ Cleary riders!
                               <small>And just like that, it's tan line season. #tanlines #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000951.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000950.jpg" title="Gorgeous day for a ride along the shores of Beautiful Green Lake. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Gorgeous day for a ride along the shores of Beautiful Green Lake. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000950.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000947.jpg" title="#Repost @elliotlovestarbicycles
-・・・
-First ride of the season where sunrise is officially before the ride start time. #beyourownbrand #champsys #bikechi #lovestarraceclub #cyclingkit #cyclingphotos #cyclingapparel #cyclingphotos #cyclingjersey" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>champsys</h4>
-                              <small>#Repost @elliotlovestarbicycles
-・・・
-First ride of the season where sunrise is officially before the ride start time. #beyourownbrand #champsys #bikechi #lovestarraceclub #cyclingkit #cyclingphotos #cyclingapparel #cyclingphotos #cyclingjersey</small>
-                           </div>
-                           <img src="../lsphotos/image000947.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000948.jpg" title="First ride of the season where sunrise is officially before the ride start time. #cycling #bicycle #championsystem #clubride #coffeeride #rideearlyrideoften #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>First ride of the season where sunrise is officially before the ride start time. #cycling #bicycle #championsystem #clubride #coffeeride #rideearlyrideoften #bikechi #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000948.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000946.jpg" title="Pink bottles and a pink saddlepack popping out on a raw titanium background to celebrate today's Giro stage. #lovestarbicyclebags #cycling #bicycle #moots #giroditalia #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Pink bottles and a pink saddlepack popping out on a raw titanium background to celebrate today's Giro stage. #lovestarbicyclebags #cycling #bicycle #moots #giroditalia #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000946.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
