--- a/instagram1.html
+++ b/instagram1.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001050.jpg" title="&quot;The grey-rain curtain turned all to silver glass and was rolled back, and he beheld white shores and beyond them a far green country under a swift sunrise.&quot; #tolkien" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>"The grey-rain curtain turned all to silver glass and was rolled back, and he beheld white shores and beyond them a far green country under a swift sunrise." #tolkien</small>
+                           </div>
+                           <img src="../lsphotos/image001050.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001048.jpg" title="Dawn singletrack. #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Dawn singletrack. #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image001048.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001047.jpg" title="Fall Fatty. #fatbike #ponyshop" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fall Fatty. #fatbike #ponyshop</small>
+                           </div>
+                           <img src="../lsphotos/image001047.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001046.jpg" title="Men's 35+ 4/5 race at Trek CX Cup. Good start to the weekend! Course is fast and fun!! #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Men's 35+ 4/5 race at Trek CX Cup. Good start to the weekend! Course is fast and fun!! #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image001046.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001044.jpg" title="Laughter, bikes and Pony Shop shirts to start the day. A big thank you to @ponylou for the mini-sized shop-wear! #siblings" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -211,58 +263,6 @@
                               <small>@mrchanzalez looking good at #relaycross today! #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image001030.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001031.jpg" title="Pre-race happy faces!" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Pre-race happy faces!</small>
-                           </div>
-                           <img src="../lsphotos/image001031.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001028.jpg" title="Late night Fat tire meetup to begin planning our #tuscobia80 adventure. #fatbike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Late night Fat tire meetup to begin planning our #tuscobia80 adventure. #fatbike</small>
-                           </div>
-                           <img src="../lsphotos/image001028.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001026.jpg" title="#babyARC 🚲😮" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babyARC 🚲😮</small>
-                           </div>
-                           <img src="../lsphotos/image001026.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001027.jpg" title="😛#babySNUB" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>😛#babySNUB</small>
-                           </div>
-                           <img src="../lsphotos/image001027.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
