--- a/instagram10.html
+++ b/instagram10.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000858.jpg" title="Always something new and interesting on this trail. #bikechi #cyclocross #gravelbike #bicycle #DPRT #adventurebike #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Always something new and interesting on this trail. #bikechi #cyclocross #gravelbike #bicycle #DPRT #adventurebike #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000858.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000859.jpg" title="DPRT #cycling #bicycle #gravelbike #cyclocross #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>DPRT #cycling #bicycle #gravelbike #cyclocross #bikechi #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000859.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000860.jpg" title="Lovestar Ladies on a family commute. #lovestarraceclub #cycling #adventurefamily #bicycle #clearybikes #outsideisfree #adventuremom" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Ladies on a family commute. #lovestarraceclub #cycling #adventurefamily #bicycle #clearybikes #outsideisfree #adventuremom</small>
+                           </div>
+                           <img src="../lsphotos/image000860.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000861.jpg" title="Getting my gear dialed in with the Last few shake down rides before #barryroubaix ... 700x40 tubless Flintridge Pros for those of you who are curious. #cycling #bicycle #cyclocross #gravelbike #gravel #gravelgrinder #bikechi #puremichigan #ridecannondale #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Getting my gear dialed in with the Last few shake down rides before #barryroubaix ... 700x40 tubless Flintridge Pros for those of you who are curious. #cycling #bicycle #cyclocross #gravelbike #gravel #gravelgrinder #bikechi #puremichigan #ridecannondale #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000861.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000857.jpg" title="Hills and thrills - Wisconsin Barry prep was very telling... #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>oliviabeaty</h4>
@@ -207,58 +259,6 @@
                               <small>...I mean seriously. That is totally an "I'm gonna rip daddy's legs off in the sprint" face... #adventurefamily #bicycle #cycling #clearybikes #lilshredder #dadlife #adventuredad #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000851.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000852.jpg" title="#babySNUB in race mode on our family commute this morning. #lovestarraceclub #lilshredder #clearybikes #cycling #bicycle #adventurefamily" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babySNUB in race mode on our family commute this morning. #lovestarraceclub #lilshredder #clearybikes #cycling #bicycle #adventurefamily</small>
-                           </div>
-                           <img src="../lsphotos/image000852.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000848.jpg" title="Fatty Friday Ride. #cycling #fatbike #bicycle #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fatty Friday Ride. #cycling #fatbike #bicycle #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000848.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000846.jpg" title="Bikes, Donuts, and Friends.  Great riding today with #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Bikes, Donuts, and Friends.  Great riding today with #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000846.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000844.jpg" title="Smiles for miles because of #donuts and #lovestarraceclub friends." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Smiles for miles because of #donuts and #lovestarraceclub friends.</small>
-                           </div>
-                           <img src="../lsphotos/image000844.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
