--- a/instagram11.html
+++ b/instagram11.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000852.jpg" title="#babySNUB in race mode on our family commute this morning. #lovestarraceclub #lilshredder #clearybikes #cycling #bicycle #adventurefamily" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#babySNUB in race mode on our family commute this morning. #lovestarraceclub #lilshredder #clearybikes #cycling #bicycle #adventurefamily</small>
+                           </div>
+                           <img src="../lsphotos/image000852.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000848.jpg" title="Fatty Friday Ride. #cycling #fatbike #bicycle #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fatty Friday Ride. #cycling #fatbike #bicycle #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000848.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000846.jpg" title="Bikes, Donuts, and Friends.  Great riding today with #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Bikes, Donuts, and Friends.  Great riding today with #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000846.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000844.jpg" title="Smiles for miles because of #donuts and #lovestarraceclub friends." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Smiles for miles because of #donuts and #lovestarraceclub friends.</small>
+                           </div>
+                           <img src="../lsphotos/image000844.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000845.jpg" title="This guy has never ridden as far as fort Sheridan...until today. Nice work, Clint! #lovestarraceclub #newgoals #breakingnewground" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -207,58 +259,6 @@
                               <small>Oversized gloves, pint sized rider 🚲 #cycling #bicycle #striderbikes #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000826.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000830.jpg" title="Daddy/Daughter bike selfie! #pogies #cycling #lovestarraceclub #dadlife #adventuredad #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Daddy/Daughter bike selfie! #pogies #cycling #lovestarraceclub #dadlife #adventuredad #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000830.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000828.jpg" title="Fun ride this morning with the #lovestarraceclub crew #myparlee" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Fun ride this morning with the #lovestarraceclub crew #myparlee</small>
-                           </div>
-                           <img src="../lsphotos/image000828.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000829.jpg" title="New Whip. #sınglespeed style. #lovestarraceclub #allcitycycles #natureboy853" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>New Whip. #sınglespeed style. #lovestarraceclub #allcitycycles #natureboy853</small>
-                           </div>
-                           <img src="../lsphotos/image000829.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000827.jpg" title="#lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>#lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000827.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
