--- a/instagram14.html
+++ b/instagram14.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000789.jpg" title="Who says we can't still have our Saturday morning coffee in Glencoe? #winterbike #fatbike #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Who says we can't still have our Saturday morning coffee in Glencoe? #winterbike #fatbike #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000789.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000788.jpg" title="Roads? Where we're going we don't need roads..." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Roads? Where we're going we don't need roads...</small>
+                           </div>
+                           <img src="../lsphotos/image000788.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000787.jpg" title="Fresh snow sunrise ride with @agonz21 & @ddave12000 🚲❄️#fatbike #cycling #bicycle #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fresh snow sunrise ride with @agonz21 & @ddave12000 🚲❄️#fatbike #cycling #bicycle #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000787.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000786.jpg" title="18 below. Riding across a frozen lagoon at sunrise...adrenaline is a great way to warm up when you're cold 😳❄️🚲⛸#fatbike #bicycle #cycling #icebike #bikechi #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>18 below. Riding across a frozen lagoon at sunrise...adrenaline is a great way to warm up when you're cold 😳❄️🚲⛸#fatbike #bicycle #cycling #icebike #bikechi #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000786.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000785.jpg" title="Gotta love cross. One of my finer moments captured right here. Photo credits @snowymountainphotography #melascx #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -207,58 +259,6 @@
                               <small>Lake Michigan was eerily calm this morning.  #bikechi #lakemichigan #cycling #bicycle #fatbike #lovestarbicyclebags #bikepacking</small>
                            </div>
                            <img src="../lsphotos/image000768.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000771.jpg" title="Obligatory first snow ride! #fatbike #snowbike #bicycle #cycling #bikechi #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Obligatory first snow ride! #fatbike #snowbike #bicycle #cycling #bikechi #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000771.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000764.jpg" title="Crazy cold snowy sleety conditions at #montrosecx even for us spectators rooting on our #lovestarraceclub Shout out to all the racers that took on the challenge" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Crazy cold snowy sleety conditions at #montrosecx even for us spectators rooting on our #lovestarraceclub Shout out to all the racers that took on the challenge</small>
-                           </div>
-                           <img src="../lsphotos/image000764.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000765.jpg" title="@casa.de.cross powering through some crazy sloppy cross conditions. #cycling #bicycle #cyclocross #cx #montrosecx #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@casa.de.cross powering through some crazy sloppy cross conditions. #cycling #bicycle #cyclocross #cx #montrosecx #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000765.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000766.jpg" title="@ddave12000 crushing at a very snowy and wet state championship race. #montrosecx #bicycle #cycling #cyclocross #cx #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@ddave12000 crushing at a very snowy and wet state championship race. #montrosecx #bicycle #cycling #cyclocross #cx #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000766.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
