--- a/instagram2.html
+++ b/instagram2.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001031.jpg" title="Pre-race happy faces!" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Pre-race happy faces!</small>
+                           </div>
+                           <img src="../lsphotos/image001031.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001028.jpg" title="Late night Fat tire meetup to begin planning our #tuscobia80 adventure. #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Late night Fat tire meetup to begin planning our #tuscobia80 adventure. #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image001028.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001026.jpg" title="#babyARC 🚲😮" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#babyARC 🚲😮</small>
+                           </div>
+                           <img src="../lsphotos/image001026.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001027.jpg" title="😛#babySNUB" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>😛#babySNUB</small>
+                           </div>
+                           <img src="../lsphotos/image001027.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001025.jpg" title="This picture makes me so happy I had to post it again 😄#dadlife" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -215,58 +267,6 @@ Concentration. #cycling #bicycle #bikemechanic #mechaniclife #parktool #abbeybik
                               <small>It's blurry but still cool. This is me trying to get rad on my fat bike lol. #borealisecho #lovestarraceclub 📷@elliotlovestarbicycles</small>
                            </div>
                            <img src="../lsphotos/image001008.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001012.jpg" title="@mrchanzalez Sunday Shreddin'" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@mrchanzalez Sunday Shreddin'</small>
-                           </div>
-                           <img src="../lsphotos/image001012.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001009.jpg" title="First shred fest. Only one big spill. Some cuts, a big ol bruise, and a giant smile. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>First shred fest. Only one big spill. Some cuts, a big ol bruise, and a giant smile. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image001009.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001006.jpg" title="This year for the three weeks of the tour, #lovestarraceclub riders were participating in a competition amongst ourselves to see who could ride the most miles, keep the highest average speed & gain the most elevation (Yellow, Green & PolkaDots) with custom seat bags and bragging rights on the line, competition was fierce...782  miles was the distance that claimed the Yellow SaddlePack. An Average speed of 19.5mph claimed the Green SaddlePack and 20,350 feet of climbing climbing claimed the polka dots! #cycling #tdf2017 #maillotjaune #clubride #bicycle #handmade #bicyclebag #lovestarbicyclebags #roadie #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>This year for the three weeks of the tour, #lovestarraceclub riders were participating in a competition amongst ourselves to see who could ride the most miles, keep the highest average speed & gain the most elevation (Yellow, Green & PolkaDots) with custom seat bags and bragging rights on the line, competition was fierce...782  miles was the distance that claimed the Yellow SaddlePack. An Average speed of 19.5mph claimed the Green SaddlePack and 20,350 feet of climbing climbing claimed the polka dots! #cycling #tdf2017 #maillotjaune #clubride #bicycle #handmade #bicyclebag #lovestarbicyclebags #roadie #bikechi #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image001006.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001007.jpg" title="😮#lilshredder" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>😮#lilshredder</small>
-                           </div>
-                           <img src="../lsphotos/image001007.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
