--- a/instagram37.html
+++ b/instagram37.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000270.jpg" title="Suburban Gravel... #lovestarbicyclebags #cycling #fatbike #framebag #cyclist #bikechi #bicycle #gravel #gravelgrinder" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Suburban Gravel... #lovestarbicyclebags #cycling #fatbike #framebag #cyclist #bikechi #bicycle #gravel #gravelgrinder</small>
+                           </div>
+                           <img src="../lsphotos/image000270.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000706.jpg" title="New kits! #lovestarfactoryteam #ladiesoflovestar #fleshleeches" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>New kits! #lovestarfactoryteam #ladiesoflovestar #fleshleeches</small>
+                           </div>
+                           <img src="../lsphotos/image000706.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000271.jpg" title="Regram from @theandyhudson ... love seeing #lovestarbicyclebags in the wild." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Regram from @theandyhudson ... love seeing #lovestarbicyclebags in the wild.</small>
+                           </div>
+                           <img src="../lsphotos/image000271.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000707.jpg" title="Sunrise ride. #lovestarfactoryteam #moots #psychloX #bikechi #cycling #cyclist" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise ride. #lovestarfactoryteam #moots #psychloX #bikechi #cycling #cyclist</small>
+                           </div>
+                           <img src="../lsphotos/image000707.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000708.jpg" title="#babysnub pushing limits. Big thanks to @jwild_photography for capturing this perfect moment...I don't think I'll ever post a better picture on the internets. (She rocked this hill without incident btw) #babyGnar #futurecyclist #lovestarfactoryteam #striderbikes" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -211,62 +263,6 @@ Bluffs of Lake Michigan. #fatbike #cycling #bikechi #bikepacking #lovestarbicycl
                               <small>Regram from @ddave12000 of this mornings #lovestarfactoryteam ride! Great crew, lots of fun. #Chicago #cycling #cyclist #lovestarbicyclebags #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000277.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000278.jpg" title="Great time riding today with the Lovestar Team. Here is Olivia and Priscilla crushing it at the Fort #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Great time riding today with the Lovestar Team. Here is Olivia and Priscilla crushing it at the Fort #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000278.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000717.jpg" title="#ladiesoflovestar #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>#ladiesoflovestar #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000717.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000279.jpg" title="#flashbackFriday to the Lovestar Factory Team crushing gravel and having a blast at the Almanzo 100. #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclist #gravel #gravelgrinder" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#flashbackFriday to the Lovestar Factory Team crushing gravel and having a blast at the Almanzo 100. #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclist #gravel #gravelgrinder</small>
-                           </div>
-                           <img src="../lsphotos/image000279.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000280.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>fatbikee</h4>
-                              <small>#Repost @elliotlovestarbicycles with @repostapp.
-・・・
-Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling #bikecommute #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000280.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
