--- a/instagram4.html
+++ b/instagram4.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000990.jpg" title="There are some mornings I don't get to ride fast or far...but they are still some of my very favorite rides. #dadlife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>There are some mornings I don't get to ride fast or far...but they are still some of my very favorite rides. #dadlife</small>
+                           </div>
+                           <img src="../lsphotos/image000990.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000988.jpg" title="Bike smiles. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Bike smiles. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000988.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000987.jpg" title="Didn't quite make it to donuts but I'll settle for Waukegan. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>clintsievers</h4>
+                              <small>Didn't quite make it to donuts but I'll settle for Waukegan. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000987.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000986.jpg" title="Sunrise shred. Had to get out and get my new bike a little dirty. #cycling #bicycle #mountainbike #mtb #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise shred. Had to get out and get my new bike a little dirty. #cycling #bicycle #mountainbike #mtb #bikechi #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000986.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000985.jpg" title="July." rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Rain made for hard packed sand and high water #cycling #bicycle #fatbike #bikepacking #adventurebike #lakemichigan #bikechi #lovestarbicyclebags #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000971.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000969.jpg" title="Weekday ride with Gonzo #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Weekday ride with Gonzo #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000969.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000968.jpg" title="Sibling coaching. #lilshredder #kidsonbikes #clearybikes #cycling #bicycle #trainer #coach #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sibling coaching. #lilshredder #kidsonbikes #clearybikes #cycling #bicycle #trainer #coach #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000968.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000967.jpg" title="#goodbyeJudson #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>#goodbyeJudson #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000967.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000966.jpg" title="Happy Friday! Get out and have an adventure this weekend! #bicycle #cycling #fatbike #lakemichigan #mtb #lilshredder #adventuredad #adventurebike #bikepacking #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Happy Friday! Get out and have an adventure this weekend! #bicycle #cycling #fatbike #lakemichigan #mtb #lilshredder #adventuredad #adventurebike #bikepacking #bikechi #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000966.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
