--- a/instagram44.html
+++ b/instagram44.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000358.jpg" title="Working on bags for a couple of customers during the kids nap time today. #dadlife #cycling #lovestarbicyclebags #handmade #custom #bikepacking #bikecamping #seatbag #bicycle #bikechi #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Working on bags for a couple of customers during the kids nap time today. #dadlife #cycling #lovestarbicyclebags #handmade #custom #bikepacking #bikecamping #seatbag #bicycle #bikechi #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000358.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000359.jpg" title="Custom #GravelGrinder bag set to brighten up another grey #chiberia winter ride. Custom bags and colors available! Get your orders in before gravel season hits. #gravel #bikewinter #bikepacking #bikecamping #custom #handmade #lovestarbicyclebags #bikechi #cycling #moots #bicycle #SewRad #nofilter" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #GravelGrinder bag set to brighten up another grey #chiberia winter ride. Custom bags and colors available! Get your orders in before gravel season hits. #gravel #bikewinter #bikepacking #bikecamping #custom #handmade #lovestarbicyclebags #bikechi #cycling #moots #bicycle #SewRad #nofilter</small>
+                           </div>
+                           <img src="../lsphotos/image000359.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000360.jpg" title="Lovestar Factory Team in the pain cave at the training hub his morning. #lovestarbicyclebags #cycling #bicycle #training #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Factory Team in the pain cave at the training hub his morning. #lovestarbicyclebags #cycling #bicycle #training #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000360.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000361.jpg" title="Finished up a very slick Black & Purple Saddle Pack for a customer. #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #bikebag #saddlebag #seatbag #bikechi #cordura #custom #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a very slick Black & Purple Saddle Pack for a customer. #lovestarbicyclebags #handmade #bicycle #cycling #bikepacking #bikebag #saddlebag #seatbag #bikechi #cordura #custom #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000361.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000362.jpg" title="Received a re-supply order of Lovestar badges just in time to start a fun customer project! #lovestarbicyclebags #handmade #bikepacking #bikebag #MUSA #Cycling #bicycle #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Happy New Year! I don't know about anybody else...but I've ridden my bike to work every day this year. #cycling #moots #bikecommute #bikechi #bicycle #lovestarbicyclebags #barmitts</small>
                            </div>
                            <img src="../lsphotos/image000377.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000378.jpg" title="Custom Lovestar #framebag. Still have a few more things to finish up...but it's getting there quickly. #lovestarbicyclebags #bikepacking #bikebag #custom #cycling #handmade #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Custom Lovestar #framebag. Still have a few more things to finish up...but it's getting there quickly. #lovestarbicyclebags #bikepacking #bikebag #custom #cycling #handmade #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000378.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000379.jpg" title="Custom Framebag Velcro coming along... #bikepacking #lovestarbicyclebags #cycling #handmade #Bicycle #bikechi #framebag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Custom Framebag Velcro coming along... #bikepacking #lovestarbicyclebags #cycling #handmade #Bicycle #bikechi #framebag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000379.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000380.jpg" title="The Lovestar Shop Apron features a sewn-in magnetic disc to hold those small bits while you work. #nextlevel #SewRad #lovestarbicyclebags #handmade #cycling #Bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>The Lovestar Shop Apron features a sewn-in magnetic disc to hold those small bits while you work. #nextlevel #SewRad #lovestarbicyclebags #handmade #cycling #Bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000380.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000381.jpg" title="The Lovestar Shop Apron is now up on my ETSY page! More photos are available on Facebook (Lovestar Bicycle Bags) hoping to get some higher quality pics ASAP. #handmade #lovestarbicyclebags #cycling #tools #shopapron #Bicycle #mechanic #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>The Lovestar Shop Apron is now up on my ETSY page! More photos are available on Facebook (Lovestar Bicycle Bags) hoping to get some higher quality pics ASAP. #handmade #lovestarbicyclebags #cycling #tools #shopapron #Bicycle #mechanic #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000381.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
