--- a/instagram47.html
+++ b/instagram47.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000418.jpg" title="Injury means no riding...but that ha left more time for sewing. Continuing to develop the Lovestar Shop Apron. Both solid and split bottom designs, with features like: bright interior pocket colors and a built-in magnet to hold screws and other small bits while you work. #handmade #lovestarbicycles #lovestarbicyclebags #cycling #SewRad #bikechi #madeinchicago #madeintheusa" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Injury means no riding...but that ha left more time for sewing. Continuing to develop the Lovestar Shop Apron. Both solid and split bottom designs, with features like: bright interior pocket colors and a built-in magnet to hold screws and other small bits while you work. #handmade #lovestarbicycles #lovestarbicyclebags #cycling #SewRad #bikechi #madeinchicago #madeintheusa</small>
+                           </div>
+                           <img src="../lsphotos/image000418.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000419.jpg" title="Got a pair of wicked awesome @defeet_international gloves today...continuing to up my accessorizing game. #cyclocross #cycling #lazersport #defeet #bikechi #lovestarbicycles #lovestarbicyclebags #championsystem" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Got a pair of wicked awesome @defeet_international gloves today...continuing to up my accessorizing game. #cyclocross #cycling #lazersport #defeet #bikechi #lovestarbicycles #lovestarbicyclebags #championsystem</small>
+                           </div>
+                           <img src="../lsphotos/image000419.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000420.jpg" title="Leg is still on the mend...in the meantime cleaning up the steed at home. #moots #psychloX #cyclocross #cx #recovery #lovestarbicycles #lovestarbicyclebags #cycling #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Leg is still on the mend...in the meantime cleaning up the steed at home. #moots #psychloX #cyclocross #cx #recovery #lovestarbicycles #lovestarbicyclebags #cycling #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000420.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000421.jpg" title="So...race was tough yesterday, I was feeling good, but about half way through the race I botched a barrier landing and crashed hard. I was able to grit through it and finished 34th, but my leg was killing me an felt really weak. Went to the Dr. today and turns out I have a partial tear in my right quad. Gonna miss the next couple of races...but I should be able to finish out the latter part of the season. #cyclocross #cycling #sadtrombone #therules #rulenumber5 #bikechi #lovestarbicyclebags #lovestarbicycles" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>So...race was tough yesterday, I was feeling good, but about half way through the race I botched a barrier landing and crashed hard. I was able to grit through it and finished 34th, but my leg was killing me an felt really weak. Went to the Dr. today and turns out I have a partial tear in my right quad. Gonna miss the next couple of races...but I should be able to finish out the latter part of the season. #cyclocross #cycling #sadtrombone #therules #rulenumber5 #bikechi #lovestarbicyclebags #lovestarbicycles</small>
+                           </div>
+                           <img src="../lsphotos/image000421.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000422.jpg" title="Ride interrupted. #cx #cyclocross #cycling #bikechi #dprt #lovestarbicycles #lovestarbicyclebags #gravel #gravelriot #gravelgrinder" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Yesterday's evening ride with teammate @agonz21 I may be a bit biased but these kits look so dope. #lovestarbicycles #lovestarbicyclebags #bikechi #cycling #roadie #bicycle #championsystem</small>
                            </div>
                            <img src="../lsphotos/image000437.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000438.jpg" title="Delivered this custom framebag today. XL frame on this Novara Buzz made for a BIG frame bag. Lots of cargo space for the next commute or pedal powered adventure! (Customer gets to trim the Velcro to taste) #handmade #bikechi #bikepacking #framebag #madeinchicago #novara #lovestarbicycles #lovestarbicyclebags #cycling #bicycle #bikebag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Delivered this custom framebag today. XL frame on this Novara Buzz made for a BIG frame bag. Lots of cargo space for the next commute or pedal powered adventure! (Customer gets to trim the Velcro to taste) #handmade #bikechi #bikepacking #framebag #madeinchicago #novara #lovestarbicycles #lovestarbicyclebags #cycling #bicycle #bikebag</small>
-                           </div>
-                           <img src="../lsphotos/image000438.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000439.jpg" title="Prototype Lovestar shop apron. Electric blue, Lime green and black turned out a bit more TRON inspired than I had anticipated, but still pretty sick. More pics going up on Facebook #lovestarbicycles #lovestarbicyclebags #handmade #cycling #bikeshop #sewrad #bikemechanic #biketools #wrenchlife" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Prototype Lovestar shop apron. Electric blue, Lime green and black turned out a bit more TRON inspired than I had anticipated, but still pretty sick. More pics going up on Facebook #lovestarbicycles #lovestarbicyclebags #handmade #cycling #bikeshop #sewrad #bikemechanic #biketools #wrenchlife</small>
-                           </div>
-                           <img src="../lsphotos/image000439.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000440.jpg" title="Sneak peak of something new coming off the Lovestar workbench...electric blue with lime green, because black is boring and just 'cause a guy's got to work doesn't mean you can't be rad in the workplace. #sewrad #lovestarbicycles #lovestarbicyclebags #handmade #madeinchicago #cycling #bikeshop #bikemechanic #blackisboring" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sneak peak of something new coming off the Lovestar workbench...electric blue with lime green, because black is boring and just 'cause a guy's got to work doesn't mean you can't be rad in the workplace. #sewrad #lovestarbicycles #lovestarbicyclebags #handmade #madeinchicago #cycling #bikeshop #bikemechanic #blackisboring</small>
-                           </div>
-                           <img src="../lsphotos/image000440.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000441.jpg" title="Boom. Giant Custom Lovestar frame bag. Lots of black with some lime green. #bikepacking #bikechi #bikebag #cycling #gravelgrinder #gravel #handmade #lovestarbicyclebags #lovestarbicycles #sewrad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Boom. Giant Custom Lovestar frame bag. Lots of black with some lime green. #bikepacking #bikechi #bikebag #cycling #gravelgrinder #gravel #handmade #lovestarbicyclebags #lovestarbicycles #sewrad</small>
-                           </div>
-                           <img src="../lsphotos/image000441.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
