--- a/instagram48.html
+++ b/instagram48.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000438.jpg" title="Delivered this custom framebag today. XL frame on this Novara Buzz made for a BIG frame bag. Lots of cargo space for the next commute or pedal powered adventure! (Customer gets to trim the Velcro to taste) #handmade #bikechi #bikepacking #framebag #madeinchicago #novara #lovestarbicycles #lovestarbicyclebags #cycling #bicycle #bikebag" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Delivered this custom framebag today. XL frame on this Novara Buzz made for a BIG frame bag. Lots of cargo space for the next commute or pedal powered adventure! (Customer gets to trim the Velcro to taste) #handmade #bikechi #bikepacking #framebag #madeinchicago #novara #lovestarbicycles #lovestarbicyclebags #cycling #bicycle #bikebag</small>
+                           </div>
+                           <img src="../lsphotos/image000438.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000439.jpg" title="Prototype Lovestar shop apron. Electric blue, Lime green and black turned out a bit more TRON inspired than I had anticipated, but still pretty sick. More pics going up on Facebook #lovestarbicycles #lovestarbicyclebags #handmade #cycling #bikeshop #sewrad #bikemechanic #biketools #wrenchlife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Prototype Lovestar shop apron. Electric blue, Lime green and black turned out a bit more TRON inspired than I had anticipated, but still pretty sick. More pics going up on Facebook #lovestarbicycles #lovestarbicyclebags #handmade #cycling #bikeshop #sewrad #bikemechanic #biketools #wrenchlife</small>
+                           </div>
+                           <img src="../lsphotos/image000439.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000440.jpg" title="Sneak peak of something new coming off the Lovestar workbench...electric blue with lime green, because black is boring and just 'cause a guy's got to work doesn't mean you can't be rad in the workplace. #sewrad #lovestarbicycles #lovestarbicyclebags #handmade #madeinchicago #cycling #bikeshop #bikemechanic #blackisboring" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sneak peak of something new coming off the Lovestar workbench...electric blue with lime green, because black is boring and just 'cause a guy's got to work doesn't mean you can't be rad in the workplace. #sewrad #lovestarbicycles #lovestarbicyclebags #handmade #madeinchicago #cycling #bikeshop #bikemechanic #blackisboring</small>
+                           </div>
+                           <img src="../lsphotos/image000440.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000441.jpg" title="Boom. Giant Custom Lovestar frame bag. Lots of black with some lime green. #bikepacking #bikechi #bikebag #cycling #gravelgrinder #gravel #handmade #lovestarbicyclebags #lovestarbicycles #sewrad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Boom. Giant Custom Lovestar frame bag. Lots of black with some lime green. #bikepacking #bikechi #bikebag #cycling #gravelgrinder #gravel #handmade #lovestarbicyclebags #lovestarbicycles #sewrad</small>
+                           </div>
+                           <img src="../lsphotos/image000441.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000442.jpg" title="Starting the build process on a customer's custom frame bag. All black exterior with some poppin' lime interior. #bikepacking #lovestarbicyclebags #lovestarbicycles #handmade #madeinchicago #bikechi #cycling #gravelgrinder #gravel #framebag #bikebag" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Finished up a custom Fuel Bag for a customer today. Black and red looked so good I had to use my own bike for the photoshoot. #custom #handmade #madeinchicago #bikechi #bikepacking #cycling #bikebag #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000456.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000457.jpg" title="The Lovestar Factory Team is gonna look sharp this year. #championsystems #customkit #cyclocross #cycling #cxiscoming #bikechi #chicagocrosscup #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>The Lovestar Factory Team is gonna look sharp this year. #championsystems #customkit #cyclocross #cycling #cxiscoming #bikechi #chicagocrosscup #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000457.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000458.jpg" title="The arrival. #customkit #cycling #cyclocross #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>The arrival. #customkit #cycling #cyclocross #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000458.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000459.jpg" title="Finished up this set of SaddlePacks today. Clean bold colors makes for a nice group photo. #lovestarbicyclebags #handmade #madeinchicago #cycling #bikepacking #bikebag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up this set of SaddlePacks today. Clean bold colors makes for a nice group photo. #lovestarbicyclebags #handmade #madeinchicago #cycling #bikepacking #bikebag</small>
-                           </div>
-                           <img src="../lsphotos/image000459.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000460.jpg" title="Lovestar Saddle Pack out on the road. #lovestarbicyclebags #custom #handmade #bikechi #madeinchicago #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Saddle Pack out on the road. #lovestarbicyclebags #custom #handmade #bikechi #madeinchicago #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000460.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
