--- a/instagram49.html
+++ b/instagram49.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000457.jpg" title="The Lovestar Factory Team is gonna look sharp this year. #championsystems #customkit #cyclocross #cycling #cxiscoming #bikechi #chicagocrosscup #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The Lovestar Factory Team is gonna look sharp this year. #championsystems #customkit #cyclocross #cycling #cxiscoming #bikechi #chicagocrosscup #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000457.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000458.jpg" title="The arrival. #customkit #cycling #cyclocross #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The arrival. #customkit #cycling #cyclocross #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000458.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000459.jpg" title="Finished up this set of SaddlePacks today. Clean bold colors makes for a nice group photo. #lovestarbicyclebags #handmade #madeinchicago #cycling #bikepacking #bikebag" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up this set of SaddlePacks today. Clean bold colors makes for a nice group photo. #lovestarbicyclebags #handmade #madeinchicago #cycling #bikepacking #bikebag</small>
+                           </div>
+                           <img src="../lsphotos/image000459.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000460.jpg" title="Lovestar Saddle Pack out on the road. #lovestarbicyclebags #custom #handmade #bikechi #madeinchicago #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Saddle Pack out on the road. #lovestarbicyclebags #custom #handmade #bikechi #madeinchicago #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000460.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000461.jpg" title="More Lovestar Saddle Packs. Had some time off for some big life things...now time to get caught up on orders! #lovestarbicyclebags #cycling #bikechi #bikepacking #handmade #custom #sewawesome" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Coming soon to the streets of Chicagoland. #bikechi #cycling #championsystems #lovestarbicyclebags #customkit #styles4miles</small>
                            </div>
                            <img src="../lsphotos/image000476.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000477.jpg" title="Judson to cemetery, solo to Illinois Beach State Park & then on to the in-laws in Winthrop Harbor. #lakemichigan #cycling #bikechi #lovestarbicyclebags #bmc #slx01 #lazer #smithoptics #illinoisbeachstatepark" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Judson to cemetery, solo to Illinois Beach State Park & then on to the in-laws in Winthrop Harbor. #lakemichigan #cycling #bikechi #lovestarbicyclebags #bmc #slx01 #lazer #smithoptics #illinoisbeachstatepark</small>
-                           </div>
-                           <img src="../lsphotos/image000477.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000478.jpg" title="So much good in this post ride picture. #belgian #waffles #moots #springflowers #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>So much good in this post ride picture. #belgian #waffles #moots #springflowers #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000478.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000479.jpg" title="Sunset group ride. #bikechi #velosmith #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunset group ride. #bikechi #velosmith #cycling #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000479.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000480.jpg" title="Trying to finish up one more Saddle Pack for a customer before heading out to #Denver tomorrow... #lovestarbicyclebags #handmade #bikechi #bikepacking #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Trying to finish up one more Saddle Pack for a customer before heading out to #Denver tomorrow... #lovestarbicyclebags #handmade #bikechi #bikepacking #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000480.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
