--- a/instagram51.html
+++ b/instagram51.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000497.jpg" title="@shenanigans1313 yep! Should fit all that no problem. Fits in a jersey pocket...loaded up with 2 levers, a multi-tool, a CO2, a snack, my ID & cards, and the biggest patch kit that I could find. I hope to have these available on my Etsy shop starting in May. #lovestarbicyclebags #cycling #rideessentials #bikechi #handmade" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@shenanigans1313 yep! Should fit all that no problem. Fits in a jersey pocket...loaded up with 2 levers, a multi-tool, a CO2, a snack, my ID & cards, and the biggest patch kit that I could find. I hope to have these available on my Etsy shop starting in May. #lovestarbicyclebags #cycling #rideessentials #bikechi #handmade</small>
+                           </div>
+                           <img src="../lsphotos/image000497.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000498.jpg" title="Spring flowers. #moots #bikechi #springride #flowerpower #cycling  #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Spring flowers. #moots #bikechi #springride #flowerpower #cycling  #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000498.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000499.jpg" title="Hard to believe this is Chicago. Easter ride. #bikechi #cycling #lovestarbicyclebags #moots #lakemichigan #3rdcoast" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Hard to believe this is Chicago. Easter ride. #bikechi #cycling #lovestarbicyclebags #moots #lakemichigan #3rdcoast</small>
+                           </div>
+                           <img src="../lsphotos/image000499.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000500.jpg" title="Lots of solo riding today. Lovestar ride wallet & double espresso action shot. #bikechi #lovestarbicyclebags #cycling #coffedoping" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lots of solo riding today. Lovestar ride wallet & double espresso action shot. #bikechi #lovestarbicyclebags #cycling #coffedoping</small>
+                           </div>
+                           <img src="../lsphotos/image000500.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000501.jpg" title="Sometimes a quiet solo ride home with some unplanned stops is best. #bikechi #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Something new in the works... #lovestarbicyclebags #handmade</small>
                            </div>
                            <img src="../lsphotos/image000516.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000517.jpg" title="Some better photos of this Almanzo 100 bag set. Hi-vis orange, neon lime and electric turquoise...definitely rad. #almanzo100 #handmade #bikepacking #framebag #gravelgrinder #lovestarbicyclebags #blackisboring" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Some better photos of this Almanzo 100 bag set. Hi-vis orange, neon lime and electric turquoise...definitely rad. #almanzo100 #handmade #bikepacking #framebag #gravelgrinder #lovestarbicyclebags #blackisboring</small>
-                           </div>
-                           <img src="../lsphotos/image000517.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000518.jpg" title="Few more shots... #bikepacking  #gravelgrinder #lovestarbicyclebags #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Few more shots... #bikepacking  #gravelgrinder #lovestarbicyclebags #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000518.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000519.jpg" title="A complete set of very flashy Lovestar Bicycle Bags. Saddlepack, Framebag & Fuel Tank bag all in matching hi-vis orange and neon lime with turquoise racing stripes. Look for these bags at the Almanzo 100 this year! #bikepacking #gravelgrinder #gravel #handmade #cycling #ultracross #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A complete set of very flashy Lovestar Bicycle Bags. Saddlepack, Framebag & Fuel Tank bag all in matching hi-vis orange and neon lime with turquoise racing stripes. Look for these bags at the Almanzo 100 this year! #bikepacking #gravelgrinder #gravel #handmade #cycling #ultracross #lovestarbicyclebags #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000519.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000520.jpg" title="To date I have worked exclusively on Singer featherweight machines. The white one is circa 1963 and the black one 1947. These are amazing machines clearly made in a different era when  products were made to be serviced an cared for over the span of multiple generations. Both of these machines have deep personal history in my family, and will probably still be humming away long after I am gone. #sometimestheoldwaysarebest #singersewingmachines #handmade #lovestarbicyclebags #dontmakethemliketheyusedtoo" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>To date I have worked exclusively on Singer featherweight machines. The white one is circa 1963 and the black one 1947. These are amazing machines clearly made in a different era when  products were made to be serviced an cared for over the span of multiple generations. Both of these machines have deep personal history in my family, and will probably still be humming away long after I am gone. #sometimestheoldwaysarebest #singersewingmachines #handmade #lovestarbicyclebags #dontmakethemliketheyusedtoo</small>
-                           </div>
-                           <img src="../lsphotos/image000520.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
