--- a/instagram6.html
+++ b/instagram6.html
@@ -6,6 +6,62 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000950.jpg" title="Gorgeous day for a ride along the shores of Beautiful Green Lake. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Gorgeous day for a ride along the shores of Beautiful Green Lake. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000950.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000947.jpg" title="#Repost @elliotlovestarbicycles
+・・・
+First ride of the season where sunrise is officially before the ride start time. #beyourownbrand #champsys #bikechi #lovestarraceclub #cyclingkit #cyclingphotos #cyclingapparel #cyclingphotos #cyclingjersey" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>champsys</h4>
+                              <small>#Repost @elliotlovestarbicycles
+・・・
+First ride of the season where sunrise is officially before the ride start time. #beyourownbrand #champsys #bikechi #lovestarraceclub #cyclingkit #cyclingphotos #cyclingapparel #cyclingphotos #cyclingjersey</small>
+                           </div>
+                           <img src="../lsphotos/image000947.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000948.jpg" title="First ride of the season where sunrise is officially before the ride start time. #cycling #bicycle #championsystem #clubride #coffeeride #rideearlyrideoften #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>First ride of the season where sunrise is officially before the ride start time. #cycling #bicycle #championsystem #clubride #coffeeride #rideearlyrideoften #bikechi #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000948.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000946.jpg" title="Pink bottles and a pink saddlepack popping out on a raw titanium background to celebrate today's Giro stage. #lovestarbicyclebags #cycling #bicycle #moots #giroditalia #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Pink bottles and a pink saddlepack popping out on a raw titanium background to celebrate today's Giro stage. #lovestarbicyclebags #cycling #bicycle #moots #giroditalia #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000946.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000943.jpg" title="Stealthy mounting on this amazing @spurcycle bell. Honestly, never thought there would be a bike bell that would look at home along side the beauty of @mootscycles welding and @chriskingbuzz components...but this knocks it out of the park. In stock now at the Pony Shop. #cycling #bicycle #adventurebike #spurcycle #moots #chrisking #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -209,58 +265,6 @@
 #cycling #bicycle #bikefamily #lilshredder #clearybikes #icecreamride #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000929.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000930.jpg" title="Dropping in. #cycling #mtb #mountainbiking #outsideisfree #freerangekids #adventuredad #clearybikes #lilshredder #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Dropping in. #cycling #mtb #mountainbiking #outsideisfree #freerangekids #adventuredad #clearybikes #lilshredder #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000930.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000928.jpg" title="Coffee and bikes. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Coffee and bikes. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000928.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000927.jpg" title="Gravel Grindin' with @agonz21 #cycling #bicycle #gravelbike #gravelgrinder #gravel #cyclocross #cx #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Gravel Grindin' with @agonz21 #cycling #bicycle #gravelbike #gravelgrinder #gravel #cyclocross #cx #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000927.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000926.jpg" title="Beautiful day for some miles on the trail. It got a bit sloppy on the south end. I don't think I've ever been able to ride past this spot. #desplainesrivertrail #saturdayafternoon #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Beautiful day for some miles on the trail. It got a bit sloppy on the south end. I don't think I've ever been able to ride past this spot. #desplainesrivertrail #saturdayafternoon #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000926.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
